--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -11,6 +11,37 @@
 description={Application Programming Interface}, 
 first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PLEASE FIX THESE ELIAS
+%%% 2s
+\newglossaryentry{2sg}{name={NAME},
+    description={Acronym Explanation (NAME) description}}
+\newglossaryentry{2s}{type=\acronymtype, name={NAME}, 
+description={Acronym Explanation}, 
+first={Acronym Explanation (NAME)\glsadd{2sg}}, see=[Glossary:]{2sg}}
+%%% ti
+\newglossaryentry{tig}{name={NAME},
+    description={Acronym Explanation (NAME) description}}
+\newglossaryentry{ti}{type=\acronymtype, name={NAME}, 
+description={Acronym Explanation}, 
+first={Acronym Explanation (NAME)\glsadd{tig}}, see=[Glossary:]{tig}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%% IC
+\newglossaryentry{icg}{name={IC},
+    description={Integrated Circuit (IC) is a set of electronic circuits on one small flat chip}}
+\newglossaryentry{ic}{type=\acronymtype, name={IC}, 
+description={Integrated Circuit}, 
+first={Integrated Circuit (IC)\glsadd{icg}}, see=[Glossary:]{icg}}
+
+%%% PC
+\newglossaryentry{pcg}{name={PC},
+    description={Personal Computer (PC)  is a multi-purpose computer whose size,
+	capabilities, and price make it feasible for individual use}}
+\newglossaryentry{pc}{type=\acronymtype, name={NAME}, 
+description={Personal Computer}, 
+first={Personal Computer (PC)\glsadd{pcg}}, see=[Glossary:]{pcg}}
+
 %%% IMU
 \newglossaryentry{imug}{name={IMU},
     description={Inertial Measurement Units (IMUs) are integrated circuits that
@@ -52,6 +83,14 @@ first={Microcontroller Unit (MCU)\glsadd{mcug}}, see=[Glossary:]{mcug}}
 description={Printed Circuit Board}, 
 first={Printed Circuit Board (PCB)\glsadd{pcbg}}, see=[Glossary:]{pcbg}}
 
+%%% PWB
+\newglossaryentry{pwbg}{name={PWB},
+    description={A Printed Wire Board (PWB) is the common acronym when
+	referring to unpopulated circuit boards.}}
+\newglossaryentry{pwb}{type=\acronymtype, name={PWB}, 
+description={Printed Wire Board}, 
+first={Printed Wire Board (PWB)\glsadd{pwbg}}, see=[Glossary:]{pwbg}}
+
 %%% SEK
 \newglossaryentry{sekg}{name={SEK},
     description={Swedish Krona (SEK) is the currency in Sweden}}
@@ -89,6 +128,44 @@ first={Infrared radiation (IR)\glsadd{irg}}, see=[Glossary:]{irg}}
 \newglossaryentry{arm}{type=\acronymtype, name={ARM}, 
 description={ARM architecture}, 
 first={ARM architecture (ARM)\glsadd{armg}}, see=[Glossary:]{armg}}
+
+%%% BMS
+\newglossaryentry{bmsg}{name={BMS},
+    description={Battery Management System (BMS) is the circuitry charging the battery}}
+\newglossaryentry{bms}{type=\acronymtype, name={BMS}, 
+description={Battery Management System}, 
+first={Battery Management System (BMS)\glsadd{bmsg}}, see=[Glossary:]{bmsg}}
+
+%%% LI-ION
+\newglossaryentry{liong}{name={LIB},
+    description={Lithium-ion Battery (LIB) is a common type of rechargeable battery}}
+\newglossaryentry{lion}{type=\acronymtype, name={LIB}, 
+description={Battery Management System}, 
+first={Lithium-ion Battery (LIB)\glsadd{liong}}, see=[Glossary:]{liong}}
+
+%%% PTC 
+\newglossaryentry{ptcg}{name={PTC},
+	description={Positive Temperature Coefficient (PTC) describes the
+	relative change of a physical property that is associated with a given change in temperature}}
+\newglossaryentry{ptc}{type=\acronymtype, name={PTC},
+description={Positive Temperature Coefficient},
+first={Positive Temperature Coefficient (PTC)\glsadd{ptcg}}, see=[Glossary:]{ptcg}}
+
+%%% SoH
+\newglossaryentry{sohg}{name={SoH},
+	description={State of health (SoH) is a figure of merit of the condition of a
+	battery, compared to its ideal conditions. The units of SoH are percent points
+	($100\%$ = the battery's conditions match the battery's specifications)}}
+\newglossaryentry{soh}{type=\acronymtype, name={SoH},
+description={State of health},
+first={State of health (SoH)\glsadd{sohg}}, see=[Glossary:]{sohg}}
+
+%%% CID
+\newglossaryentry{cidg}{name={CID},
+	description={Current Interrupt Device (CID) ???????????????}}
+\newglossaryentry{cid}{type=\acronymtype, name={CID},
+description={Current Interrupt Device},
+first={Current Interrupt Device (CID)\glsadd{cidg}}, see=[Glossary:]{cidg}}
 
 %%% ST
 \newglossaryentry{stg}{name={ST},
@@ -202,6 +279,24 @@ first={Attitude and Heading Reference System (AHRS)\glsadd{ahrsg}}, see=[Glossar
 \newglossaryentry{matlab}{type=\acronymtype, name={MATLAB}, 
 description={Matrix Laboratory}, 
 first={Matrix Laboratory (MATLAB)\glsadd{matlabg}}, see=[Glossary:]{matlabg}}
+
+%%% SoC
+\newglossaryentry{socg}{name={SoC},
+    description={State of Charge (SoC) is normally used when discussing the current state
+	of a battery in use, working as kind of a fuel gauge but for battery packs. The units
+	of SoC are percentage points ($0\%$ = empty; $100\%$ = full)}}
+\newglossaryentry{soc}{type=\acronymtype, name={SoC}, 
+description={State of Charge}, 
+first={State of Charge (SoC)\glsadd{socg}}, see=[Glossary:]{socg}}
+
+%%% CCCV
+\newglossaryentry{cccvg}{name={CCCV},
+    description={Constant Current, Constant Voltage (CCCV) is a combination of constant
+	voltage and constant current charging, limiting the amount of current to a pre-set
+	level until the battery reaches a pre-set voltage level\cite{cccv}}}
+\newglossaryentry{cccv}{type=\acronymtype, name={CCCV}, 
+description={Constant Current, Constant Voltage}, 
+first={Constant Current, Constant Voltage (CCCV)\glsadd{cccvg}}, see=[Glossary:]{cccvg}}
 
 %%% ADC
 \newglossaryentry{adcg}{name={ADC},
