--- a/report/main.tex
+++ b/report/main.tex
@@ -34,6 +34,7 @@
 % abbreviations glossary
 \usepackage[acronym]{glossaries}
 \makeglossaries
+\glsenablehyper
 
 \newcommand{\project}{\emph {SailorAid}}
 
@@ -123,7 +124,7 @@
 \clearpage
 \section{Battery charging circuitry}\label{sec:bat}
 \chapterauthor{Grape, Elias (Lundberg, Josef)}
-\input{charging_design.tex}
+\input{bms.tex}
 
 \clearpage
 \section{Software Design}\label{sec:sw}
