--- a/report/references.tex
+++ b/report/references.tex
@@ -94,7 +94,9 @@ Dr. Oliver Nelles
 Duygun, M., Kutlu, L. \& Sickles, R.C. J Prod Anal (2016) 46: 155. \url{https://doi.org/10.1007/s11123-016-0477-z}
 \bibitem{non-linear}
 Noureldin ., Karamat T.B., Georgy J. (2013)\texttt{ Basic Navigational Mathematics, Reference Frames and the Earth’s Geometry. In: Fundamentals of Inertial Navigation, Satellite-based Positioning and their Integration.} Springer, Berlin, Heidelberg
-
+\bibitem{cccv}
+\emph{Power Guy}, May 26, 2016, San Diego, USA,
+  \url{https://www.us.tdk-lambda.com/media/292143/tdk-lambda-blog-052616.pdf}
 \bibitem{UoC}
   \url{https://edg.uchicago.edu/tutorials/load_cell/}
 \bibitem{animal}
