--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -18,12 +18,14 @@ first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{ap
 \newglossaryentry{2s}{type=\acronymtype, name={NAME}, 
 description={Acronym Explanation}, 
 first={Acronym Explanation (NAME)\glsadd{2sg}}, see=[Glossary:]{2sg}}
+
 %%% ti
-\newglossaryentry{tig}{name={NAME},
-    description={Acronym Explanation (NAME) description}}
-\newglossaryentry{ti}{type=\acronymtype, name={NAME}, 
-description={Acronym Explanation}, 
-first={Acronym Explanation (NAME)\glsadd{tig}}, see=[Glossary:]{tig}}
+\newglossaryentry{tig}{name={TI},
+    description={Texas Instruments Inc. (TI) is an American technology company
+	that designs and manufactures semiconductors and various integrated circuits }}
+\newglossaryentry{ti}{type=\acronymtype, name={TI}, 
+description={Texas Instruments Inc.}, 
+first={Texas Instruments Inc. (TI)\glsadd{tig}}, see=[Glossary:]{tig}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
