--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -84,13 +84,13 @@ The second revision fixed all known problems, followed the space requirements an
 \end{figure}
 
 \subsubsection{Third revision}
-With almost all problems solved in the second revision, what remained was some hotfix for an unexpected wiring error in the \gls{gps}; interference between \gls{i2c} clock and data line; minimizing much to large decoupling ground loops; unwanted antennas; ground islands of missing copper and a KiCad problem where disconnected \gls{via}s lose their net property. The option to pull power from either \gls{usb} or batteries remained in the last revision, as this makes programming and testing much easier. A four pin connector to measure the battery level through \gls{i2c} was added, and since the power level of this depends slightly on the power left in the batteries a logic level converter was designed to allow for a variable voltage level, see \autoref{fig:schr3b}.
+With almost all problems solved in the second revision, what remained was some hotfix for an unexpected wiring error in the \gls{gps}; interference between \gls{i2c} clock and data line; minimizing much to large decoupling ground loops; unwanted antennas; ground islands of missing copper and a KiCad problem where disconnected \gls{via}s lose their net property. The option to pull power from either \gls{usb} or batteries remained in the last revision, as this makes programming and testing much easier. A four pin connector to measure the battery level through \gls{i2c} was added, and since the power level of this depends slightly on the power left in the batteries logic level converters was designed to allow for a variable voltage level\cite{llc}, the electronic circuitry can be see in \autoref{fig:schr3b}.
 For the third revision all decisions have been made and the schematic can be seen as \autoref{fig:schr3a}, \ref{fig:schr3b} and \ref{fig:schr3c}.
 
 Following communicative devices will used and act as ``mudule areas'', i.e. these units will be the central units of the \gls{pcb} layout. This was introduced in the second
 \begin{itemize}[noitemsep]
 \item{\makebox[3cm][l]{STM32F411RET} - Microcontoller unit}
-\item{\makebox[3cm][l]{FT232RL} - \gls{usb}to serial converter (USART)}
+\item{\makebox[3cm][l]{FT232RL} - \gls{usb}toSerial converter (USART)}
 \item{\makebox[3cm][l]{A2235-H} - \gls{gps} unit (UART)}
 \item{\makebox[3cm][l]{SPBTLE-RF} - \gls{bt} connection unit (SPI)}
 \item Sensors ($I^2C$):
@@ -128,8 +128,9 @@ The third, and last, revision of the \gls{pcb} can be seen in \autoref{fig:pcbr3
 \chapterauthor*{Eriksson, Kenny (Brolin, Daniel)}
 \input{tmp_hw_choice_of_components_kenny.tex}
 
-\subsection{results (TiP)}\label{sec:hw:tip2}
-stuff4
+\subsection{Results, Discussion and Future Work}\label{sec:hw:tip2}
+The final sensor board works as expected. Had it not been for the fact that one of the sensors was broken it would have been soldered without any problem. No interference problems or antennas has been found on the last revision \gls{pcb} and no hot fixes were necessary.
+Calibrating the potentiometers for the analog load cell amplifiers is possibly the most uncertain process, as wrongly tuning these will offset all values in the feedback. This is however necessary until the last prototype for the casing is complete, see \autoref{sec:case}.
+The system is estimated to run for about $24hrs$, more about power management in \autoref{sec:bat}. 
 
-\subsection{discussion (TiP)}\label{sec:hw:tip3}
-stuff5
+All components in the last revision prototype is of a rather large form factor considering the relatively low effect acting on the components, making soldering and testing easier but taking up more space. As it is now the system can very likely be minimized further. Taking away the general purpose button, set the general form factor to the industry standard $0402$ ($1mm$x$.5mm$) which is still easily soldered by hand), use $4-$layer design could probably shrink the system to about half of the size if no more devices are added to the design. Alternatively more sensors or communication with an external sensor board could be supported in future updates without the need of to much remodeling. 
