--- a/report/references.tex
+++ b/report/references.tex
@@ -43,6 +43,9 @@
 \bibitem{lm1117}
 	KiCad library entry for voltage regulator component lm1117 by \emph{ObKo}, 2012  
   \url{https://github.com/ObKo/kicad-libraries/blob/master/libraries/lm1117.lib}
+\bibitem{llc}
+	Bi-directional Logic Level Converter, \emph{Sparkfun}, Aug 4, 1997,
+	\url{https://cdn.sparkfun.com/tutorialimages/BD-LogicLevelConverter/an97055.pdf}
 \bibitem{ftdi}
 	KiCad library entry for USBtoSerial component FT232RL by \emph{jbaker0428}, Oct 3, 2010
 	\url{https://github.com/jbaker0428/Kicad-Libraries/blob/master/library/ftdi.lib}
