--- a/report/main.tex
+++ b/report/main.tex
@@ -103,9 +103,9 @@
 \chapterauthor{Theolin, Henrik (Axelsson, Oskar)}
 \input{physics.tex}
 
-%\section{Product Application}
-%\label{sec:application}
-%\input{application.tex}
+\section{Product Application}
+\label{sec:application}
+\input{application.tex}
 \clearpage
 \section{Mechanical sensors}
 \chapterauthor{Lundberg, Josef (Grape, Elias)}
@@ -116,15 +116,16 @@
 \chapterauthor{Brolin, Daniel (Eriksson, Kenny)}
 \input{hw_design.tex}
 
-\clearpage
-\section{Casing}\label{sec:case}
-\chapterauthor{Lundberg, Josef (  )}
-\input{casing.tex}
 
 \clearpage
 \section{Battery charging circuitry}\label{sec:bat}
 \chapterauthor{Grape, Elias (Lundberg, Josef)}
 \input{bms.tex}
+
+\clearpage
+\section{Casing}\label{sec:case}
+\chapterauthor{Lundberg, Josef (One, No )}
+\input{casing.tex}
 
 \clearpage
 \section{Software Design}\label{sec:sw}
@@ -139,10 +140,8 @@
 \chapterauthor{Axelsson, Oskar (Theolin, Henrik)}
 \input{kf.tex}
 
-
 \clearpage
 \input{references.tex}
-
 \clearpage
 \input{APPENDIX.tex}
 
